redis bug fix
